--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/jobtask/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.ed77fdfd.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.f554e901.js">
-    <link rel="stylesheet" href="/assets/index.5fc619a5.css">
+    <script type="module" crossorigin src="/jobtask/assets/index.3fd1d1a8.js"></script>
+    <link rel="modulepreload" href="/jobtask/assets/vendor.db413dca.js">
+    <link rel="stylesheet" href="/jobtask/assets/index.5fc619a5.css">
   </head>
   <body>
     <div id="root"></div>
